p2/elements/ingress/ingress_app1.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app1-ingress
# spec:
#   rules:
#   - host: app1.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: app1-service
#             port:
#               number: 80
#   - host: app2.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: app2-service
#             port:
#               number: 80


# ingress-app1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  annotations:
    spec.ingressClassName: traefik-app1
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
